<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MedLink</string>
    <string name="find_medicine">Find Medicine</string>
    <string name="search_hint">Search for Insulin, Amoxicil…</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="antibiotics">Antibiotics</string>
    <string name="diabetes">Diabetes</string>
    <string name="cardiac">Cardiac</string>
    <string name="first_aid">First Aid</string>
    <string name="mental_health">Mental Health</string>
    <string name="need_help_title">Need direct help?</string>
    <string name="need_help_subtitle">Connect with 50+ local NGO partners near you.</string>
    <string name="find_ngo">Find NGO Partners</string>
    <string name="find_store_title">Find Our Store</string>
    <string name="find_store_subtitle">Locate nearby donation centers within 10km.</string>
    <string name="view_on_map">View on Map</string>
    <string name="my_requests">My Requests</string>
    <string name="track_history">Track History</string>
    <string name="donate_medicine">Donate Medicine</string>
    <string name="home">Home</string>
    <string name="requests">Requests</string>
    <string name="donate">Donate</string>
    <string name="ngos">NGOs</string>
    <string name="profile">Profile</string>
    <string name="search_from_ngo">Search from verified NGO inventory</string>
    <string name="insulin_glargine">Insulin Glargine</string>
    <string name="requested_from_hope">Requested from: Hope Health NGO</string>
    <string name="verifying_prescription">Verifying prescription</string>
    <string name="expected_2_days">Expected: 2 days</string>
    <string name="amoxicillin">Amoxicillin 500mg</string>
    <string name="location_red_cross">Location: Red Cross Center Downtown</string>
    <string name="awaiting_pickup">Awaiting pickup</string>
    <string name="pick_up_now">Pick up now</string>
    <string name="processing">PROCESSING</string>
    <string name="ready">READY</string>
    <string name="notification">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
